--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,20 @@
+*, *:after, *:before {
+  -webkit-user-select: none;
+  -khtml-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+  
+	margin: 0px 0px;
+  padding: 0px 0px;
+  border: none;
+  outline: none;
+  font-weight: 300;
+  box-sizing: border-box;
+  font-family: monospace;
+	font-size: 16px;
+}
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -5,9 +22,59 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  display: flex;
+  justify-content: center;
+  height: 100vh;
+  background: url('/src/assets/bg_bolos_festivos_vertical.jpeg');
+  background-position: bottom left;
+  background-size: cover;
+  padding: 5px;
 }
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+a {
+	text-decoration: none;
+	color: black;
+}
+
+label {
+  -webkit-user-select: initial;
+  -khtml-user-select: initial;
+  -moz-user-select: initial;
+  -ms-user-select: initial;
+  user-select: initial;
+}
+
+input {
+  -webkit-user-select: initial;
+  -khtml-user-select: initial;
+  -moz-user-select: initial;
+  -ms-user-select: initial;
+  user-select: initial;
+  appearance: none;
+}
+
+button {
+  background-color: transparent;
+  cursor: pointer;
+}
+
+ul {
+	list-style:none;
+}
+
+img {
+	max-width: 100%;
+}
+
+.app {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  height: calc(100vh - 10px);
+  max-width: 850px;
 }
