--- a/src/index.css
+++ b/src/index.css
@@ -25,8 +25,8 @@ body {
   display: flex;
   justify-content: center;
   height: 100vh;
-  background: url('/src/assets/bg_bolos_festivos_vertical.jpeg');
-  background-position: bottom left;
+  background: url('/src/assets/bg_bolos_festivos_vertical.jpeg') no-repeat;
+  background-position: center right;
   background-size: cover;
   padding: 5px;
 }
@@ -38,7 +38,7 @@ code {
 
 a {
 	text-decoration: none;
-	color: black;
+	color: #424242;
 }
 
 label {
@@ -71,10 +71,21 @@ img {
 	max-width: 100%;
 }
 
-.app {
+.App {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  height: calc(100vh - 10px);
+  width: calc(100vw - 40px);
+}
+
+.cup {
   display: flex;
   flex-direction: column;
   align-items: center;
-  height: calc(100vh - 10px);
-  max-width: 850px;
+  width: 330px;
+  height: 640px;
+  box-shadow: inset 0 0 40px 0px rgba(66,66,66,0.5);
+  border-radius: 165px 165px 60px 60px;
 }
