--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Coiny&display=swap');
+
 *, *:after, *:before {
   -webkit-user-select: none;
   -khtml-user-select: none;
