--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -1,28 +1,9 @@
 .header {
-    position: relative;
-    opacity: 0;
+    /* position: relative; */
     display: flex;
     flex-direction: row;
-    justify-content: center;
-    align-items: center;
-    width: 230px;
-    height: 120px;
-    margin: 15px 0 20px 0;
-
-    background: rgba(255,255,255,0.7);
-    box-shadow: 0 0 10px 10px rgba(255,255,255,0.7);
-    transition: 0.3s;
-    border-radius: 100px 100px 50px 50px;
-    animation: layerDown 1.36s cubic-bezier(.44,.04,.97,.03) forwards;
-}
-
-@keyframes layerDown {
-    0% {bottom: 100px;}
-    60% {opacity: 0;}
-    100% {opacity: 1; bottom: 0px;}
-}
-
-.header img {
-    position: absolute;
-    top: -35px;
+    justify-content: space-between;
+    align-items: flex-start;
+    width: 250px;
+    height: 100%;
 }
