--- a/src/index.css
+++ b/src/index.css
@@ -76,18 +76,18 @@ img {
 .App {
   display: flex;
   flex-direction: column;
-  justify-content: center;
+  justify-content: space-between;
   align-items: center;
   height: calc(100vh - 10px);
   width: calc(100vw - 40px);
 }
 
-.cup {
+main {
+  position: relative;
   display: flex;
   flex-direction: column;
+  justify-content: flex-end;
   align-items: center;
-  width: 330px;
-  height: 640px;
-  box-shadow: inset 0 0 40px 0px rgba(66,66,66,0.5);
-  border-radius: 165px 165px 60px 60px;
+  /* height: 100%; */
+  min-height: 470px;
 }
