--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -1,9 +1,31 @@
 .header {
-    /* position: relative; */
     display: flex;
     flex-direction: row;
     justify-content: space-between;
     align-items: flex-start;
     width: 250px;
     height: 100%;
+    max-height: 40px;
+}
+
+.logo {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-top: -10px;
+    cursor: pointer;
+}
+
+.shadow {
+    position: absolute;
+    z-index: -1;
+    width: 60px;
+    height: 60px;
+    border-radius: 30px;  
+    background: rgba(255,255,255,0.7);
+    box-shadow: 0 0 10px 10px rgba(255,255,255,0.7);
+}
+
+.log img {
+    position: absolute;
 }
