--- a/src/Cloche/Cloche.module.css
+++ b/src/Cloche/Cloche.module.css
@@ -1,4 +1,5 @@
 .container {
+  --clocheHeight: 150px;
   position: relative;
   display: flex;
   flex-direction: column;
@@ -13,10 +14,9 @@
   justify-content: flex-end;
   align-items: center;
   width: 250px;
-  height: 200px;
+  height: var(--clocheHeight);
   box-shadow: inset 0 0 40px 0px rgba(66,66,66,0.5);
   border-radius: 125px 125px 0px 0px;
-  margin-top: -30px;
 
   opacity: 0;
   bottom: 200px;
@@ -30,7 +30,7 @@
 
 .cloche::before {
   position: absolute;
-  bottom: 200px;
+  bottom: var(--clocheHeight);
   content: "";
   height: 20px;
   width: 40px;
@@ -40,20 +40,20 @@
 
 .logo {
   position: absolute;
-  bottom: 130px;
+  bottom: 200px;
   opacity: 0;
   display: flex;
   justify-content: center;
   align-items: center;
   margin: 15px 0 20px 0;
-  animation: logoDown 1.3s cubic-bezier(.44,.04,.97,.03) forwards;
+  animation: logoDown 1s cubic-bezier(.44,.04,.97,.03) forwards;
   cursor: pointer;
   width: 100%;
 }
 
 @keyframes logoDown {
   60% {opacity: 0;}
-  100% {opacity: 1; bottom: 30px;}
+  100% {opacity: 1; bottom: 0px;}
 }
 
 .shadow {
@@ -94,5 +94,5 @@
   flex-direction: column;
   align-items: center;
   width: 250px;
-  height: 200px;
+  height: var(--clocheHeight);
 }
