--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -2,10 +2,11 @@
     display: flex;
     flex-direction: row;
     justify-content: space-between;
-    align-items: flex-start;
-    width: 250px;
+    align-items: center;
+    width: 100%;
     height: 100%;
-    max-height: 40px;
+    max-height: 60px;
+    padding: 0px 20px;
 }
 
 .logo {
@@ -29,3 +30,35 @@
 .log img {
     position: absolute;
 }
+
+.navLink {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 5px;
+    font-family: 'Coiny', cursive;
+    font-size: 1rem;
+    color: #424242;
+    text-shadow: 1px 1px 5px white;
+    border-radius: 20px;  
+    background: rgba(255,255,255,0.7);
+    box-shadow: 0 0 10px 10px rgba(255,255,255,0.7);
+    transition: 0.3s;
+}
+
+.navLink:hover, .navLink:hover, .activePage {
+    color: #dedede;
+    text-shadow: 1px 1px 5px black;
+    background: rgba(73,42,21,0.8);
+    box-shadow: 0 0 10px 10px rgba(73,42,21,0.8);
+}
+
+/* .icon {
+    width: 20px;
+    height: 20px;
+    fill: #424242;
+}
+
+.activePage svg {
+    fill: #dedede;
+} */
