--- a/src/index.css
+++ b/src/index.css
@@ -79,7 +79,8 @@ img {
   justify-content: space-between;
   align-items: center;
   height: calc(100vh - 10px);
-  width: calc(100vw - 40px);
+  width: calc(100vw - 20px);
+  max-width: 600px;
 }
 
 main {
@@ -89,8 +90,8 @@ main {
   justify-content: flex-start;
   align-items: center;
   /* height: 100%; */
-  min-height: 390px;
-  margin-top: 30px;
+  min-height: 470px;
+  margin-top: 20px;
 }
 
 .title {
