--- a/src/components/Product/Product.module.css
+++ b/src/components/Product/Product.module.css
@@ -1,15 +1,34 @@
 .container {
     display: flex;
-    flex-direction: column;
-    justify-content: space-between;
+    flex-direction: row;
+    justify-content: flex-start;
     align-items: center;
-    width: 100px;
-    height: 100px;
+    background: rgba(127,105,91,0.6);
+    gap: 5px;
+    border: 2px solid rgba(127,105,91);
+    border-radius: 10px;
+    width: 300px;
+    height: 150px;
 }
 
-.container h4 {
-    font-family: 'Coiny', cursive;
-    font-size: 1rem;
+.image {
+    width: 130px;
+    height: 130px;
+    margin: 0 10px;
+    border: 2px solid rgba(127,105,91);
+    border-radius: 10px;
+}
+
+.description {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    width: 140px;
+    height: 130px;
     color: #dedede;
     text-shadow: 1px 1px 5px black;
+}
+
+.description p {
+    font-size: 0.8rem;
 }
