--- a/src/index.css
+++ b/src/index.css
@@ -13,15 +13,12 @@
   outline: none;
   font-weight: 300;
   box-sizing: border-box;
-  font-family: monospace;
+  font-family: 'Coiny', cursive;
 	font-size: 16px;
 }
 
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   display: flex;
@@ -34,8 +31,7 @@ body {
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+  font-family: monospace;
 }
 
 a {
@@ -80,7 +76,7 @@ img {
   align-items: center;
   height: calc(100vh - 10px);
   width: calc(100vw - 20px);
-  max-width: 600px;
+  max-width: 940px;
 }
 
 main {
@@ -89,14 +85,12 @@ main {
   flex-direction: column;
   justify-content: flex-start;
   align-items: center;
-  /* height: 100%; */
+  height: 100%;
   min-height: 470px;
   margin-top: 20px;
 }
 
 .title {
-    font-family: 'Coiny', cursive;
-    font-size: 1.2rem;
     color: #424242;
     text-shadow: 1px 1px 5px white;
 }
