--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -3,10 +3,10 @@
     flex-direction: row;
     justify-content: space-between;
     align-items: center;
-    width: 100%;
-    height: 100%;
-    max-height: 60px;
+    width: 100vw;
+    height: 60px;
     padding: 0px 20px;
+    background-color: rgba(127,105,91);
 }
 
 .logo {
@@ -17,7 +17,7 @@
     cursor: pointer;
 }
 
-.shadow {
+/* .shadow {
     position: absolute;
     z-index: -1;
     width: 60px;
@@ -25,7 +25,7 @@
     border-radius: 30px;  
     background: rgba(255,255,255,0.7);
     box-shadow: 0 0 10px 10px rgba(255,255,255,0.7);
-}
+} */
 
 .log img {
     position: absolute;
@@ -38,19 +38,17 @@
     gap: 5px;
     font-family: 'Coiny', cursive;
     font-size: 1rem;
-    color: #424242;
-    text-shadow: 1px 1px 5px white;
-    border-radius: 20px;  
-    background: rgba(255,255,255,0.7);
-    box-shadow: 0 0 10px 10px rgba(255,255,255,0.7);
+    color: #dedede;
+    text-shadow: 1px 1px 5px black;
+    border-radius: 20px;
     transition: 0.3s;
 }
 
 .navLink:hover, .navLink:hover, .activePage {
-    color: #dedede;
-    text-shadow: 1px 1px 5px black;
-    background: rgba(127,105,91,0.6);
-    box-shadow: 0 0 10px 10px rgba(127,105,91,0.6);
+    color: #424242;
+    text-shadow: 1px 1px 5px white;
+    background: rgba(255,255,255,0.7);
+    box-shadow: 0 0 10px 10px rgba(255,255,255,0.7);
 }
 
 /* .icon {
