--- a/src/pages/Home/Home.module.css
+++ b/src/pages/Home/Home.module.css
@@ -1,7 +1,16 @@
 .container {
     position: relative;
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
     justify-content: flex-start;
     align-items: center;
+    width: 100%;
+    height: 100%;
+    overflow: auto;
+}
+
+@media (max-width: 40rem) {
+    .container {
+        flex-direction: column;
+    }
 }
