--- a/src/index.css
+++ b/src/index.css
@@ -15,6 +15,8 @@
   box-sizing: border-box;
   font-family: 'Coiny', cursive;
 	font-size: 16px;
+  color: #3c2e31;
+  text-shadow: 1px 1px 5px white;
 }
 
 body {
@@ -31,7 +33,6 @@ code {
 
 a {
 	text-decoration: none;
-	color: #424242;
 }
 
 label {
@@ -76,19 +77,28 @@ main {
   flex-direction: column;
   justify-content: flex-start;
   align-items: center;
-
-  background: url('/src/assets/bg_bolos_festivos_vertical.jpeg') no-repeat;
-  background-position: center right;
-  background-size: cover;
-
+  background-color: rgba(203,156,164, 0.3);
   height: calc(100vh - 75px);
   width: 100vw;
   overflow: hidden;
 }
 
+main::after {
+  background: url('/src/assets/backgrounds/bg_bolos_festivos_vertical.jpeg') no-repeat;
+  background-position: center right;
+  background-size: cover;
+  content: ' ';
+  display: block;
+  position: absolute;
+  z-index: -10;
+  top: 0; 
+  left: 0;
+  width: 100%;
+  height: 100%;
+  opacity: 0.5;
+}
+
 h2 {
   font-size: 1.4rem;
-  color: #424242;
-  text-shadow: 1px 1px 5px white;
   margin-top: 25px;
 }
