--- a/src/pages/Contact/Contact.module.css
+++ b/src/pages/Contact/Contact.module.css
@@ -5,9 +5,7 @@
     align-items: center;
     width: 100%;
     height: 100%;
-    color: #424242;
-    text-shadow: 1px 1px 5px white;
-    gap: 5px;
+    gap: 3px;
 }
 
 .container a {
@@ -17,7 +15,7 @@
 }
 
 .container a:hover {
-    color: #dedede;
+    color: #efe1e3;
     text-shadow: 1px 1px 5px black;    
 }
 
