--- a/src/index.css
+++ b/src/index.css
@@ -7,8 +7,8 @@
   -ms-user-select: none;
   user-select: none;
   
-	margin: 0px 0px;
-  padding: 0px 0px;
+	margin: 0;
+  padding: 0;
   border: none;
   outline: none;
   font-weight: 300;
@@ -101,4 +101,18 @@ main::after {
 h2 {
   font-size: 1.4rem;
   margin-top: 25px;
+}
+
+.slick-dots {
+  bottom: 20px !important;
+  height: auto;
+}
+
+.slick-next {
+  right: 10px !important;
+}
+
+.slick-prev {
+  left: 10px !important;
+  z-index: 10;
 }
