--- a/src/pages/Contact/Contact.module.css
+++ b/src/pages/Contact/Contact.module.css
@@ -5,13 +5,14 @@
     align-items: center;
     width: 100%;
     height: 100%;
-    gap: 3px;
+    overflow: auto;
 }
 
 .container a {
     display: flex;
     align-items: center;
     gap: 5px;
+    margin-bottom: 7px;
 }
 
 .container a:hover {
