--- a/src/pages/Contact/Contact.module.css
+++ b/src/pages/Contact/Contact.module.css
@@ -6,22 +6,46 @@
     width: 100%;
     height: 100%;
     overflow: auto;
-    gap: 3px;
 }
 
-.container a {
+@media (max-width: 26rem) {
+    .container {overflow: hidden;}
+}
+
+.contact {
     display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: center;
+}
+
+.contact a {
+    display: flex;
+    justify-content: center;
     align-items: center;
     gap: 5px;
-    margin-bottom: 7px;
+    margin-bottom: 10px;
+    transition: 0.3s;
 }
 
-.container a:hover {
+.contact a:hover {
     color: #efe1e3;
-    text-shadow: 1px 1px 5px black;    
+    text-shadow: 1px 1px 5px black;
+    background: rgba(86,63,57,0.8);
+    box-shadow: 0 0 10px 10px rgba(86,63,57,0.8);
+    border-radius: 20px;
+    padding: 0 10px;
 }
 
-.container a img {
+.contact img {
     width: 20px;
-    border-radius: 5px;
+    margin-bottom: 3px;
+    border-radius: 6px;
+    animation: twist 0.7s infinite;
+}
+
+@keyframes twist {
+    0% {transform: rotateZ(0deg);}
+    50% {transform: rotateZ(15deg);}
+    100% {transform: rotateZ(0deg);}
 }
