--- a/src/helpers/Loading.module.css
+++ b/src/helpers/Loading.module.css
@@ -1,8 +1,9 @@
 .wrapper {
-    position: absolute;
+    display: flex;
+    justify-content: center;
+    align-items: center;
     width: 100%;
     height: 100%;
-    display: flex;
     top: 0px;
     left: 0px;
     z-index: 1000;
@@ -24,4 +25,10 @@
     0% {transform: rotateZ(100deg);}
     50% {transform: rotateZ(150deg);}
     100% {transform: rotateZ(100deg);}
+}
+
+.logo {
+    width: 100%;
+    height: 100%;
+    max-width: 600px;
 }
