--- a/src/pages/About/About.module.css
+++ b/src/pages/About/About.module.css
@@ -8,11 +8,13 @@
 
     display: flex;
     flex-direction: column;
-    justify-content: center;
+    justify-content: flex-start;
     align-items: center;
     max-width: 600px;
     padding: 0 20px;
-
+    overflow: auto;
+    width: 100%;
+    height: 100%;
 }
 
 .element {
