--- a/src/components/Cloche/Cloche.module.css
+++ b/src/components/Cloche/Cloche.module.css
@@ -5,7 +5,7 @@
   flex-direction: column;
   justify-content: flex-start;
   align-items: center;
-  margin-bottom: 30px;
+  margin-top: 30px;
 }
 
 .cloche {
