--- a/src/helpers/Loading.module.css
+++ b/src/helpers/Loading.module.css
@@ -4,9 +4,8 @@
     align-items: center;
     width: 100%;
     height: 100%;
-    top: 0px;
-    left: 0px;
     z-index: 1000;
+    padding: 0 40px;
 }
 
 .loading {
@@ -30,5 +29,5 @@
 .logo {
     width: 100%;
     height: 100%;
-    max-width: 600px;
+    max-width: 400px;
 }
