--- a/src/pages/Contact/Contact.module.css
+++ b/src/pages/Contact/Contact.module.css
@@ -24,7 +24,7 @@
     justify-content: center;
     align-items: center;
     gap: 5px;
-    margin-bottom: 10px;
+    margin: 5px 0;
     transition: 0.3s;
     vertical-align: middle;
 }
