--- a/src/components/Product/Product.module.css
+++ b/src/components/Product/Product.module.css
@@ -32,6 +32,13 @@
     height: 130px;
 }
 
-.description p {
-    font-size: 0.8rem;
+.description h4 {
+    /* color: #f14670; */
+    font-size: 1.2rem;
+}
+
+.description h3 {
+    font-size: 1.2rem;
+    color: #4fbcaf;
+    text-shadow: 1px 1px 5px black;
 }
