--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -10,6 +10,7 @@
     background-color: rgba(218,185,191);
     border-top: 3px solid rgba(86,63,57);
     border-bottom: 3px solid rgba(86,63,57);
+    z-index: 1;
 }
 
 .container {
