--- a/src/components/Product/ContentProduct.module.css
+++ b/src/components/Product/ContentProduct.module.css
@@ -1,27 +1,33 @@
 .container {
-  margin: 0 auto;
   display: flex;
   flex-direction: row;
-  justify-content: flex-start;
+  justify-content: stretch !important;
   align-items: center;
-  background-color: rgb(170,149,141);
+  background-color: rgb(218,185,191);
   border: 2px solid rgba(127,105,91);
   border-radius: 10px;
   width: 100%;
   height: 100%;
-  max-width: 900px;
+  max-width: 700px;
+  max-height: 350px;
   padding: 10px;
+  gap: 20px;
+
+  opacity: 0;
+  transform: scale(0.8);
+  animation: scaleUp 0.3s forwards;
 }
 
-.container * {
-  color: #efe1e3;
-  text-shadow: 1px 1px 5px black;
+@keyframes scaleUp {
+  to {
+      opacity: 1;
+      transform: scale(1.0);
+  }
 }
 
 .image {
   width: 50%;
   height: 100%;
-  margin: 0 10px;
   border: 2px solid rgba(127,105,91);
   border-radius: 10px;
 }
@@ -29,36 +35,66 @@
 .description {
   display: flex;
   flex-direction: column;
-  justify-content: space-between;
+  justify-content: center;
+  align-items: center;
+  width: 50%;
   height: 100%;
-  margin-top: 10px;
+  padding: 10px 10px 0px 10px;
+  gap: 10px;
 }
 
-@media (max-width: 40rem) {
-  .container {
-    flex-direction: column;
-  }
-  .image {
-    width: 100%;
-    height: 50%;
-  }
-  .description {
-    height: 50%;
-  }
+.container * {
+  color: #efe1e3;
+  text-shadow: 1px 1px 5px black;
 }
 
 .description h4 {
-  /* color: #f14670; */
-  font-size: 1rem;
+  color: #f14670;
+  font-size: 1.5rem;
+  text-align: center;
 }
 
 .description p {
-  font-size: 0.8rem;
+  font-size: 1rem;
   text-align: justify;
 }
 
-.description h3 {
-  font-size: 1rem;
+.container .price {
   color: #4fbcaf;
-  text-shadow: 1px 1px 5px black;
+}
+
+@media (max-width: 42rem) {
+  .container {
+    flex-direction: column;
+    max-height: 600px;
+    gap: 0px;
+  }
+  .image {
+    width: 100%;
+    height: 100%;
+  }
+  .description {
+    width: 100%;
+    height: auto;
+    gap: 10px;
+  }
+  .description h4 {
+    font-size: 1.2rem;
+  }
+}
+
+@media (max-height: 27rem) {
+  .container {
+    flex-direction: row;
+  }
+}
+
+@media (max-width: 20rem), (max-height: 20rem) {
+  .description h4 {
+    font-size: 1rem;
+  }
+
+  .description p {
+    font-size: 0.8rem;
+  }
 }
