--- a/src/components/Product/ModalProduct.module.css
+++ b/src/components/Product/ModalProduct.module.css
@@ -1,10 +1,19 @@
 .container {
   position: fixed;
+  display: flex;
+  justify-content: center;
+  align-items: center;
   width: 100%;
   height: 100%;
   background: rgba(0, 0, 0, 0.6);
   top: 0px;
   left: 0px;
   z-index: 10;
-  padding: 40px;
+  padding: 50px;
+}
+
+@media (max-height: 27rem) {
+  .container {
+    padding: 20px 13%;
+  }
 }
