--- a/src/components/Product/Product.module.css
+++ b/src/components/Product/Product.module.css
@@ -3,12 +3,14 @@
     flex-direction: row;
     justify-content: flex-start;
     align-items: center;
-    background: rgba(127,105,91,0.6);
-    gap: 5px;
+    /* background: rgba(127,105,91,0.6); */
+    background-color: rgb(218,185,191,0.6);
+    gap: 10px;
     border: 2px solid rgba(127,105,91);
     border-radius: 10px;
     width: 300px;
     height: 150px;
+    padding: 10px;
 }
 
 .container * {
@@ -19,7 +21,6 @@
 .image {
     width: 130px;
     height: 130px;
-    margin: 0 10px;
     border: 2px solid rgba(127,105,91);
     border-radius: 10px;
 }
@@ -33,8 +34,13 @@
 }
 
 .description h4 {
-    /* color: #f14670; */
     font-size: 1.2rem;
+    transition: 0.3s;
+}
+
+.description h4:hover {
+    color: #f14670;
+    cursor: pointer;
 }
 
 .description h3 {
