--- a/src/index.css
+++ b/src/index.css
@@ -25,6 +25,8 @@ body {
   -moz-osx-font-smoothing: grayscale;
   display: flex;
   justify-content: center;
+  background-color: rgba(86,63,57);
+  z-index: -3;
 }
 
 code {
@@ -70,6 +72,8 @@ img {
   flex-direction: column;
   justify-content: space-between;
   align-items: center;
+  background-color: white;
+  z-index: -1;
 }
 
 main {
@@ -78,9 +82,10 @@ main {
   justify-content: flex-start;
   align-items: center;
   background-color: rgba(203,156,164, 0.3);
-  height: calc(100vh - 75px);
+  height: calc(100vh - 75px - 60px);
   width: 100vw;
   overflow: hidden;
+  z-index: 0;
 }
 
 main::after {
@@ -90,11 +95,11 @@ main::after {
   content: ' ';
   display: block;
   position: absolute;
-  z-index: -10;
+  z-index: -2;
   top: 0; 
   left: 0;
   width: 100vw;
-  height: 100vh;
+  height: calc(100% - 60px);
   opacity: 0.4;
 }
 
