--- a/src/index.css
+++ b/src/index.css
@@ -26,7 +26,6 @@ body {
   display: flex;
   justify-content: center;
   background-color: rgba(86,63,57);
-  z-index: -3;
 }
 
 code {
@@ -82,7 +81,7 @@ main {
   justify-content: flex-start;
   align-items: center;
   background-color: rgba(203,156,164, 0.3);
-  height: calc(100vh - 75px - 60px);
+  height: calc(100vh - 75px);
   width: 100vw;
   overflow: hidden;
   z-index: 0;
@@ -95,12 +94,16 @@ main::after {
   content: ' ';
   display: block;
   position: absolute;
-  z-index: -2;
   top: 0; 
   left: 0;
-  width: 100vw;
-  height: calc(100% - 60px);
+  width: 100%;
+  height: 100%;
   opacity: 0.4;
+  z-index: -2;
+}
+
+@media (max-width: 40rem) {
+  main {height: calc(100vh - 75px - 75px);}
 }
 
 h2 {
