--- a/src/pages/Contact/Contact.module.css
+++ b/src/pages/Contact/Contact.module.css
@@ -6,9 +6,15 @@
     width: 100%;
     height: 100%;
     overflow: auto;
+    margin-top: 20px;
 }
 
-@media (max-width: 26rem) {
+@media (max-width: 21rem) {
+    .container * {font-size: 0.8rem;}
+    .container h2 {font-size: 1rem; margin-top: 0; }
+}
+
+@media (max-height: 19rem) {
     .container {overflow: hidden;}
 }
 
@@ -17,6 +23,11 @@
     flex-direction: column;
     justify-content: flex-start;
     align-items: center;
+    background-color: rgb(218,185,191,0.6);
+    padding: 0px 20px 5px 20px;
+    border: 2px solid rgba(127,105,91);
+    border-radius: 10px;
+    margin: 10px 0;
 }
 
 .contact a {
@@ -32,8 +43,8 @@
 .contact a:hover {
     color: #efe1e3;
     text-shadow: 1px 1px 5px black;
-    background: rgba(86,63,57,0.8);
-    box-shadow: 0 0 10px 10px rgba(86,63,57,0.8);
+    background: #4fbcaf;
+    box-shadow: 0 0 10px 10px #4fbcaf;
     border-radius: 20px;
     padding: 0 10px;
 }
