--- a/src/components/Product/ContentProduct.module.css
+++ b/src/components/Product/ContentProduct.module.css
@@ -4,7 +4,7 @@
   justify-content: stretch !important;
   align-items: center;
   background-color: rgb(218,185,191);
-  border: 2px solid rgba(127,105,91);
+  border: 2px solid rgba(86,63,57);
   border-radius: 10px;
   width: 100%;
   height: 100%;
@@ -28,7 +28,7 @@
 .image {
   width: 50%;
   height: 100%;
-  border: 2px solid rgba(127,105,91);
+  border: 2px solid rgba(86,63,57);
   border-radius: 10px;
 }
 
@@ -89,12 +89,23 @@
   }
 }
 
-@media (max-width: 20rem), (max-height: 20rem) {
+@media (max-width: 42rem), (max-height: 20rem) {
   .description h4 {
     font-size: 1rem;
   }
-
   .description p {
     font-size: 0.8rem;
+  }
+}
+
+@media (max-height: 20rem) {
+  .description {
+    gap: 0;
+  }
+  .description h4 {
+    font-size: 0.8rem;
+  }
+  .description p {
+    font-size: 0.625rem;
   }
 }
