--- a/src/pages/Contact/Contact.module.css
+++ b/src/pages/Contact/Contact.module.css
@@ -9,6 +9,11 @@
     margin-top: 20px;
 }
 
+.container p, .container a {
+    text-align: center;
+    width: 100%;
+}
+
 @media (max-width: 21rem) {
     .container * {font-size: 0.8rem;}
     .container h2 {font-size: 1rem; margin-top: 0; }
@@ -24,9 +29,9 @@
     justify-content: flex-start;
     align-items: center;
     background-color: rgb(218,185,191,0.6);
-    padding: 0px 20px 5px 20px;
     border: 2px solid rgba(127,105,91);
     border-radius: 10px;
+    padding: 0px 20px 5px 20px;
     margin: 10px 0;
 }
 
@@ -46,7 +51,6 @@
     background: #4fbcaf;
     box-shadow: 0 0 10px 10px #4fbcaf;
     border-radius: 20px;
-    padding: 0 10px;
 }
 
 .contact img {
