--- a/src/components/Footer/Footer.module.css
+++ b/src/components/Footer/Footer.module.css
@@ -2,14 +2,14 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  background-color: rgba(86,63,57);
-  width: 100vw;
+  background-color: var(--darkBrown);
+  width: var(--mainWidth);
   height: 15px;
   z-index: 1;
 }
 
 .footer a {
-  color: #795d62;
+  color: var(--lightBrown);
   text-shadow: 1px 1px 5px black;
   font-size: 0.5rem;
 }
