--- a/src/components/Product/ContentProduct.module.css
+++ b/src/components/Product/ContentProduct.module.css
@@ -3,8 +3,8 @@
   flex-direction: row;
   justify-content: stretch !important;
   align-items: center;
-  background-color: rgb(218,185,191);
-  border: 2px solid rgba(86,63,57);
+  background-color: var(--mediumPink);
+  border: 2px solid var(--darkBrown);
   border-radius: 10px;
   width: 100%;
   height: 100%;
@@ -28,7 +28,7 @@
 .image {
   width: 50%;
   height: 100%;
-  border: 2px solid rgba(86,63,57);
+  border: 2px solid var(--darkBrown);
   border-radius: 10px;
 }
 
@@ -38,18 +38,17 @@
   justify-content: center;
   align-items: center;
   width: 50%;
-  height: 100%;
   padding: 10px 10px 0px 10px;
   gap: 10px;
 }
 
 .container * {
-  color: #efe1e3;
+  color: var(--lightPink);
   text-shadow: 1px 1px 5px black;
 }
 
 .description h4 {
-  color: #f14670;
+  color: var(--darkPink);
   font-size: 1.5rem;
   text-align: center;
 }
@@ -60,7 +59,7 @@
 }
 
 .container .price {
-  color: #4fbcaf;
+  color: var(--darkCyan);
 }
 
 @media (max-width: 42rem) {
@@ -75,7 +74,6 @@
   }
   .description {
     width: 100%;
-    height: auto;
     gap: 10px;
   }
   .description h4 {
