--- a/src/components/Product/Product.module.css
+++ b/src/components/Product/Product.module.css
@@ -3,10 +3,9 @@
     flex-direction: row;
     justify-content: flex-start;
     align-items: center;
-    /* background: rgba(127,105,91,0.6); */
     background-color: rgb(218,185,191,0.6);
     gap: 10px;
-    border: 2px solid rgba(127,105,91);
+    border: 2px solid var(--lightBrown);
     border-radius: 10px;
     width: 300px;
     height: 150px;
@@ -14,14 +13,14 @@
 }
 
 .container * {
-    color: #efe1e3;
+    color: var(--lightPink);
     text-shadow: 1px 1px 5px black;
 }
 
 .image {
     width: 130px;
     height: 130px;
-    border: 2px solid rgba(127,105,91);
+    border: 2px solid var(--lightBrown);
     border-radius: 10px;
 }
 
@@ -39,12 +38,12 @@
 }
 
 .description h4:hover {
-    color: #f14670;
+    color: var(--darkPink);
     cursor: pointer;
 }
 
 .description h3 {
     font-size: 1.2rem;
-    color: #4fbcaf;
+    color: var(--darkCyan);
     text-shadow: 1px 1px 5px black;
 }
