--- a/src/pages/About/About.module.css
+++ b/src/pages/About/About.module.css
@@ -1,11 +1,4 @@
 .container {
-    --divider-border-style: curved;
-    --divider-color: #723d3d;
-    --divider-border-width: 3.4px;
-    --divider-pattern-height: 17.3px;
-    --divider-pattern-size: 100px;
-    --divider-pattern-url: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' preserveAspectRatio='none' overflow='visible' height='100%' viewBox='0 0 24 24' fill='none' stroke='black' stroke-width='3.4' stroke-linecap='square' stroke-miterlimit='10'%3E%3Cpath d='M0,6c6,0,6,13,12,13S18,6,24,6'/%3E%3C/svg%3E");
-
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
@@ -18,8 +11,7 @@
 }
 
 .element {
-    border-top: 3.4px solid #723d3d;
-    /* border-image: var(--divider-pattern-url); */
+    border-top: 3.4px solid var(--lightBrown);
     padding: 20px;
     text-align: justify;
 }
