--- a/src/pages/Contact/Contact.module.css
+++ b/src/pages/Contact/Contact.module.css
@@ -6,7 +6,6 @@
     width: 100%;
     height: 100%;
     overflow: auto;
-    margin-top: 20px;
 }
 
 .container p, .container a {
@@ -16,7 +15,7 @@
 
 @media (max-width: 21rem) {
     .container * {font-size: 0.8rem;}
-    .container h2 {font-size: 1rem; margin-top: 0; }
+    .container h2 {font-size: 1rem;}
 }
 
 @media (max-height: 19rem) {
@@ -29,7 +28,7 @@
     justify-content: flex-start;
     align-items: center;
     background-color: rgb(218,185,191,0.6);
-    border: 2px solid rgba(127,105,91);
+    border: 2px solid var(--lightBrown);
     border-radius: 10px;
     padding: 0px 20px 5px 20px;
     margin: 10px 0;
@@ -42,14 +41,13 @@
     gap: 5px;
     margin: 5px 0;
     transition: 0.3s;
-    vertical-align: middle;
 }
 
 .contact a:hover {
-    color: #efe1e3;
+    color: var(--lightPink);
     text-shadow: 1px 1px 5px black;
-    background: #4fbcaf;
-    box-shadow: 0 0 10px 10px #4fbcaf;
+    background: var(--darkCyan);
+    box-shadow: 0 0 10px 10px var(--darkCyan);
     border-radius: 20px;
 }
 
