--- a/src/components/Footer/Footer.module.css
+++ b/src/components/Footer/Footer.module.css
@@ -3,7 +3,7 @@
   justify-content: center;
   align-items: center;
   background-color: var(--darkBrown);
-  width: var(--mainWidth);
+  width: 100vw;
   height: 15px;
   z-index: 1;
 }
