--- a/src/components/Product/Product.module.css
+++ b/src/components/Product/Product.module.css
@@ -7,7 +7,8 @@
     gap: 10px;
     border: 2px solid var(--lightBrown);
     border-radius: 10px;
-    width: 300px;
+    width: 100%;
+    /* width: 300px; */
     height: 150px;
     padding: 10px;
 }
@@ -18,7 +19,7 @@
 }
 
 .image {
-    width: 130px;
+    width: 50%;
     height: 130px;
     border: 2px solid var(--lightBrown);
     border-radius: 10px;
@@ -28,7 +29,7 @@
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    width: 140px;
+    width: 50%;
     height: 130px;
 }
 
