--- a/src/pages/Products/GridProducts.module.css
+++ b/src/pages/Products/GridProducts.module.css
@@ -15,20 +15,20 @@
     width: 100%;
     gap: 10px;
     overflow: auto;
-    padding: 10px 20px;
+    padding: 10px 40px;
     max-width: 1200px;
 }
 
-@media (max-width: 1120px) {
+@media (max-width: 1160px) {
     .products {grid-template-columns: 1fr 1fr 1fr;}
 }
 
-@media (max-width: 860px) {
+@media (max-width: 900px) {
     .products {grid-template-columns: 1fr 1fr;}
 }
 
-@media (max-width: 600px) {
-    .products {grid-template-columns: 1fr;}
+@media (max-width: 640px) {
+    .products {grid-template-columns: 1fr; padding: 10px 20px;}
 }
 
 @media (min-width: 40rem) {
