start seasonal page

--- a/src/pages/Contact/Contact.module.css
+++ b/src/pages/Contact/Contact.module.css
@@ -31,7 +31,7 @@
     border: 2px solid var(--lightBrown);
     border-radius: 10px;
     padding: 0px 20px 5px 20px;
-    margin: 10px 0;
+    margin: 10px 0 0 0;
 }
 
 .contact a {
