--- a/src/index.css
+++ b/src/index.css
@@ -13,6 +13,7 @@
   outline: none;
   font-weight: 300;
   box-sizing: border-box;
+  /* font-family: cursive, 'Coiny'; */
   font-family: 'Coiny', cursive;
 	font-size: 16px;
   vertical-align: middle;
@@ -32,6 +33,7 @@ body {
   --mediumPink: rgba(218,185,191);
   --lightPink: rgba(239,225,227);
   --darkCyan: #4fbcaf;
+  --lightCyan: #95d6cf;
 
   margin: 0;
   -webkit-font-smoothing: antialiased;
