moved purchase form to new order page and add easterImages

--- a/src/components/Easter/Easter.module.css
+++ b/src/components/Easter/Easter.module.css
@@ -8,20 +8,14 @@
   height: 100%;
   text-align: center;
   overflow: auto;
+  padding: 0 10px;
 }
 
-.product {
+.products {
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
   gap: 10px;
-  max-width: 80%;
-  margin-bottom: 20px;
-}
-
-.form {
-  display: flex;
-  flex-direction: column;
-  gap: 25px;
+  width: 100%;
 }
