--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -15,7 +15,7 @@
     flex-direction: row;
     justify-content: space-between;
     align-items: center;
-    padding: 0px 20px;
+    padding: 0px 10px;
     width: 100%;
     max-width: 600px;
 }
@@ -57,9 +57,9 @@
     fill: var(--darkBrown);
 }
 
-@media (max-width: 23rem) {
+/* @media (max-width: 23rem) {
     .icon {display: none}
-}
+} */
 
 
 .logo {
