--- a/src/components/Product/ContentProduct.module.css
+++ b/src/components/Product/ContentProduct.module.css
@@ -54,10 +54,10 @@
 }
 
 .description p {
+  color: black;
   font-size: 1rem;
   text-align: justify;
   letter-spacing: 1px;
-  text-shadow: 1px 1px 5px black;
 }
 
 .container .price {
