--- a/src/index.css
+++ b/src/index.css
@@ -13,8 +13,7 @@
   outline: none;
   font-weight: 300;
   box-sizing: border-box;
-  /* font-family: cursive, 'Coiny'; */
-  font-family: 'Coiny', cursive;
+  font-family: 'Coiny', arial;
 	font-size: 16px;
   vertical-align: middle;
   color: var(--darkBrown);
@@ -49,6 +48,10 @@ code {
 
 a {
 	text-decoration: none;
+}
+
+p {
+  font-family: arial, monospace;
 }
 
 label {
