--- a/src/components/Easter/EasterProduct.module.css
+++ b/src/components/Easter/EasterProduct.module.css
@@ -21,6 +21,7 @@
 .name {
     color: white;
     font-size: 1.1rem;
+    line-height: 2rem;
     text-shadow: 1px 1px 5px black;
     transition: 0.3s;
 }
