--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -21,6 +21,7 @@
 }
 
 .navLink {
+    position: relative;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -31,7 +32,7 @@
     vertical-align: middle;
 }
 
-.navLink span {
+.navLink {
     color: var(--lightPink);
     text-shadow: 1px 1px 5px black;
 }
@@ -41,7 +42,7 @@
     box-shadow: 0 0 10px 10px var(--lightPink);
 }
 
-.navLink:hover span, .activePage span, .activePage svg>*, .navLink:hover svg>* {
+.navLink:hover, .activePage, .activePage svg>*, .navLink:hover svg>* {
     color: var(--darkBrown);
     text-shadow: 1px 1px 5px white;
     stroke: var(--darkBrown);
@@ -85,4 +86,18 @@
     border-radius: 30px;  
     background: var(--lightPink);
     box-shadow: 0 0 10px 10px var(--lightPink);
+}
+
+.bagCount {
+    position: absolute;
+    text-align: center;
+    left: 16px;
+    top: -8px;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 0.75rem;
+    color: white;
+    background-color: #f31;
+    width: 16px;
+    line-height: 16px;
+    border-radius: 8px;
 }
