--- a/src/components/Product/ContentProduct.module.css
+++ b/src/components/Product/ContentProduct.module.css
@@ -54,7 +54,7 @@
 }
 
 .description p {
-  color: black;
+  color: var(--darkBrown);
   font-size: 1rem;
   text-align: justify;
   letter-spacing: 1px;
