--- a/src/index.css
+++ b/src/index.css
@@ -11,7 +11,7 @@
   padding: 0;
   border: none;
   outline: none;
-  font-weight: 300;
+  font-weight: bold;
   box-sizing: border-box;
   font-family: 'Coiny', arial;
 	font-size: 16px;
@@ -50,8 +50,8 @@ a {
 	text-decoration: none;
 }
 
-p {
-  font-family: arial, monospace;
+p, label, select, option {
+  font-family: Arial, Helvetica, sans-serif;
 }
 
 label {
