--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -34,7 +34,7 @@
 
 .navLink {
     color: var(--lightPink);
-    text-shadow: 1px 1px 5px black;
+    text-shadow: 1px 1px 5px #333;
 }
 
 .navLink:hover, .activePage {
