--- a/src/components/Easter/EasterProduct.module.css
+++ b/src/components/Easter/EasterProduct.module.css
@@ -21,9 +21,9 @@
 
 .name {
     color: white;
-    font-size: 1.1rem;
+    font-size: 1rem;
     line-height: 2rem;
-    text-shadow: 1px 1px 5px black;
+    text-shadow: 1px 1px 5px #333;
     transition: 0.3s;
 }
 
