--- a/src/components/Forms/InputRadio.module.css
+++ b/src/components/Forms/InputRadio.module.css
@@ -7,7 +7,6 @@
   position: relative;
   transition: 0.3s;
   cursor: pointer;
-  margin-right: 30px;
 }
 
 .inputGroup label:hover, .inputGroup input:checked + label {
@@ -15,10 +14,10 @@
 }
 
 .inputGroup label::before {
-  /* border: 2px solid white; */
+  border: 2px solid white;
   position: absolute;
-  top: -2px;
-  left: -15px;
+  top: 4px;
+  left: -18px;
   width: 15px;
   height: 15px;
   border-radius: 10px;
@@ -28,6 +27,6 @@
 .inputGroup input:checked + label::before {  
   background-image: url("data:image/svg+xml,%3Csvg width='10' height='10' viewBox='0 0 20 20' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M5.414 11L4 12.414l5.414 5.414L20.828 6.414 19.414 5l-10 10z' fill='green' fill-rule='nonzero'/%3E%3C/svg%3E ");
   background-repeat: no-repeat;
-  background-position: center;
+  /* background-position: center; */
   z-index: 2;
 }
