--- a/src/components/Easter/EasterProduct.module.css
+++ b/src/components/Easter/EasterProduct.module.css
@@ -48,3 +48,11 @@
 .delete:hover {
     background-color: var(--lightPink);
 }
+
+.description p {
+    font-size: 0.75rem;
+}
+.description h4 {
+    color: var(--darkCyan);
+    text-shadow: 1px 1px 5px white;
+}
