--- a/src/components/Delivery/Delivery.module.css
+++ b/src/components/Delivery/Delivery.module.css
@@ -8,27 +8,15 @@
 }
 
 .products {
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr 1fr;
+    display: flex;
+    flex-direction: row;
     justify-content: center;
     align-items: center;
     width: 100%;
     gap: 10px;
+    flex-wrap: wrap;
     overflow: auto;
-    padding: 10px 40px;
-    max-width: 1200px;
-}
-
-@media (max-width: 1160px) {
-    .products {grid-template-columns: 1fr 1fr 1fr;}
-}
-
-@media (max-width: 900px) {
-    .products {grid-template-columns: 1fr 1fr;}
-}
-
-@media (max-width: 640px) {
-    .products {grid-template-columns: 1fr; padding: 10px 20px;}
+    padding: 10px 0;
 }
 
 @media (min-width: 40rem) {
