--- a/src/pages/Products/Products.module.css
+++ b/src/pages/Products/Products.module.css
@@ -3,36 +3,64 @@
     flex-direction: column;
     justify-content: flex-start;
     align-items: center;
+    width: 100%;
     height: 100%;
+    overflow: auto;
+}
+
+.container p, .container a {
+    text-align: center;
     width: 100%;
 }
 
-.products {
+@media (max-width: 21rem) {
+    .container * {font-size: 0.8rem;}
+    .container h2 {font-size: 1rem;}
+}
+
+@media (max-height: 19rem) {
+    .container {overflow: hidden;}
+}
+
+.contact {
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: center;
+    background-color: rgb(218,185,191,0.6);
+    border: 2px solid var(--lightBrown);
+    border-radius: 10px;
+    padding: 0px 20px 5px 20px;
+    margin: 10px 0 0 0;
+}
+
+.contact a {
+    font-family: Arial, Helvetica, sans-serif;
+    display: flex;
     justify-content: center;
     align-items: center;
-    width: 100%;
-    gap: 10px;
-    flex-wrap: wrap;
-    overflow: auto;
-    padding: 10px 0;
+    gap: 5px;
+    margin: 5px 0;
+    transition: 0.3s;
 }
 
-@media (min-width: 40rem) {
-    .products::-webkit-scrollbar {
-        background: transparent;
-        width: 10px;
-    }
+.contact a:hover {
+    color: var(--lightPink);
+    text-shadow: 1px 1px 5px #333;
+    background: var(--darkCyan);
+    box-shadow: 0 0 10px 10px var(--darkCyan);
+    border-radius: 20px;
+}
 
-    .products::-webkit-scrollbar-track {
-        background: rgba(127,105,91,0.2);
-        border-radius: 10px;
-        padding: 5px;
-    }
+.contact img {
+    width: 20px;
+    margin-bottom: 3px;
+    border-radius: 6px;
+    animation: twist 0.7s infinite;
+}
 
-    .products::-webkit-scrollbar-thumb {
-        background-color: rgba(127,105,91,0.4);
-        border-radius: 10px;
-    }
+@keyframes twist {
+    0% {transform: rotateZ(0deg);}
+    50% {transform: rotateZ(15deg);}
+    100% {transform: rotateZ(0deg);}
 }
