--- a/src/pages/Order/Order.module.css
+++ b/src/pages/Order/Order.module.css
@@ -11,6 +11,10 @@
   padding: 0 10px;
 }
 
+.container > p:last-child {
+  margin-bottom: 20px;
+}
+
 .products {
   display: flex;
   justify-content: center;
