--- a/src/components/Easter/ContentEasterProduct.module.css
+++ b/src/components/Easter/ContentEasterProduct.module.css
@@ -92,6 +92,14 @@
   gap: 5px;
 }
 
+.select select, .select option {
+  width: auto;
+  max-width: 210px;
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 0.75rem;
+  line-height: 16px;
+}
+
 .container h6 {
   font-size: 0.625rem;
   font-family: Arial, Helvetica, sans-serif;
